--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,7 +9,7 @@ http {
         ssl_certificate_key /etc/nginx/certs/privkey.pem;
 
         location / {
-            proxy_pass http://backend:8000;
+            proxy_pass http://smart-health-systems-backend:8000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
